<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.bucket.BucketFragment">

    <RelativeLayout
        android:id="@+id/empty_loot"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgLootBuf"
            android:src="@drawable/ic_loot"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtEmptyLoot"
            android:layout_marginTop="8dp"
            android:text="@string/empty_loot"
            android:layout_below="@+id/imgLootBuf"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/add"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimary"
            android:clickable="true"
            android:textSize="24sp"
            android:layout_below="@+id/txtEmptyLoot"
            android:layout_centerHorizontal="true"
            android:id="@+id/txtAddToLoot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recViewLoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnContainer" />

    <android.support.v7.widget.CardView
        android:id="@+id/btnContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:elevation="16dp"
        app:cardElevation="16dp">

        <Button
            android:id="@+id/btnGoToPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            style="@style/StandardButtonStyle"
            android:text="@string/go_to_pay" />

    </android.support.v7.widget.CardView>

</RelativeLayout>