<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/btnCountMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/txtEatCount"
        style="@style/ChangeCountButtonStyle"
        android:padding="8dp"
        android:src="@drawable/ic_minus_2" />

    <TextView
        android:id="@+id/txtEatCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:layout_toStartOf="@+id/btnCountPlus"
        android:maxLength="1"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        tools:text="3" />


    <ImageButton
        android:id="@+id/btnCountPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        style="@style/ChangeCountButtonStyle"
        android:padding="8dp"
        android:src="@drawable/ic_plus_2" />

    <TextView
        android:id="@+id/txtAddingEatPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        tools:text="2000" />

    <TextView
        android:id="@+id/txtPriceValuteInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/txtAddingEatPrice"
        android:text="@string/rubles"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCountPlus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCloseDialog"
            style="@style/StandardButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/close" />

        <Button
            android:id="@+id/btnAddToLoot"
            style="@style/StandardButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/add" />

    </LinearLayout>

</RelativeLayout>